converted the templae to adhere to the ports and adapters architecture

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
   <modules>
     <module>domain</module>
     <module>adapters</module>
-    <module>app</module>
+    <module>runtime</module>
   </modules>
 
   <properties>
