--- a/runtime/src/main/resources/application.yml
+++ b/runtime/src/main/resources/application.yml
@@ -27,6 +27,15 @@ spring:
           max-idle: 8
           min-idle: 2
 
+  kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    consumer:
+      group-id: greeting-service-group
+      auto-offset-reset: earliest
+    producer:
+      acks: all
+      retries: 3
+
 management:
   endpoints:
     web:
