--- a/adapters/pom.xml
+++ b/adapters/pom.xml
@@ -80,6 +80,12 @@
       <version>1.3.2</version>
     </dependency>
 
+    <!-- Observability -->
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
